[project]
name = "lfb-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2026.3.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
